src/test/ui/variance/variance-use-contravariant-struct-1.stderr
error[E0308]: mismatched types
  --> $DIR/variance-use-contravariant-struct-1.rs:12:5
   |
LL |     v
   |     ^ lifetime mismatch
   |
   = note: expected struct `SomeStruct<&'min ()>`
              found struct `SomeStruct<&'max ()>`
note: the lifetime `'min` as defined here...
  --> $DIR/variance-use-contravariant-struct-1.rs:8:8
   |
LL | fn foo<'min,'max>(v: SomeStruct<&'max ()>)
   |        ^^^^
note: ...does not necessarily outlive the lifetime `'max` as defined here
  --> $DIR/variance-use-contravariant-struct-1.rs:8:13
   |
LL | fn foo<'min,'max>(v: SomeStruct<&'max ()>)
   |             ^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
